Se añadio lo de LP y SO

--- a/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -1,8 +1,8 @@
 
 ## Semántica Formal
 
-La semántica especifica el significado de las expreciones, sentencias y unidades del programa. En otras palabras es la descripción rigurosa del significado o comportamiento de
-las construcciones de un Lenguaje de programación, teniendo una gran importancia a la hora del diseño, estandarización, uso e incluso en las pruebas de programción y testeo.
+La semántica especifica el significado de las expresiones, sentencias y unidades del programa. En otras palabras, es la descripción rigurosa del significado o comportamiento de
+las construcciones de un Lenguaje de programación, teniendo una gran importancia a la hora del diseño, estandarización, uso e incluso en las pruebas de programación y testeo.
 
 >[!note] Nota
 >La especificación formal de la semántica de un lenguaje es muy útil tanto para los implementadores como para los programadores que usen dicho lenguaje. Ya que esta forma de describir el lenguaje deja claro como se va a comportar.
@@ -10,62 +10,83 @@ las construcciones de un Lenguaje de programación, teniendo una gran importanci
 ## Elementos de la Semántica
 
 - **Variables**
-- **Valores y referencias**: A las variables se le pueden asociar -> R-value denorar el contenido de una sección de memoria y los L-value que denota una locación en memoria.
-- **Expreciones**: Las expresiones son estructuras sintácticas que permiten combinar valores y operaciones para calcular nuevos valores. Existen expresiones de diferentes tipos. Por Ej.: 
-	- request == 1 -> es una expreción de tipo booleana.
-	- " invalid request. \n " -> es una expreción de tipo array de caracteres.
+- **Valores y referencias**: A las variables se le pueden asociar -> R-value denota el contenido de una sección de memoria y los L-value que denota una locación en memoria.
+- **Expresiones**: Las expresiones son estructuras sintácticas que permiten combinar valores y operaciones para calcular nuevos valores. Existen expresiones de diferentes tipos. Por Ej.: 
+	- request == 1 -> es una expresión de tipo booleana.
+	- " invalid request. \n " -> es una expresión de tipo array de caracteres.
+
+>[!note] Nota de Clase
+>Se debe conocer el orden el el cual se van a ejecutar las expreciones, al mismo tiempo tener unas reglas claras a la hora de la implementación asi todos los compiladores obtienen el mismo resultado.
 
 ## Tipos de Semánticas Formales
 
-Al contrario que las normas sintacticas que se pueden describir a traves de la notacion BNF, para la semántica no existe un estandar o unica forma de describirlo, por lo que contamos con varias formas de hacerlo, entre ellas:
+Al contrario que las normas sintácticas que se pueden describir a través de la notación BNF, para la semántica no existe un estándar o única forma de describirlo, por lo que contamos con varias formas de hacerlo, entre ellas:
 
-- **Semántica Estatica**: Hay caracteristicas de los lenguajes de progrmación que no pueden ser descriptas mediante notaciones libres de contexto (BNF o EBNF), pero que se pueden resolver en tiempo de compilación. Esta mucho mas relacionado con las formas y estructuras validas permitidas, o en el chequeo de tipos. Para describir este tipo de semantica se utiliza una notación de ***Gramática de Atributos***.
-- **Semántica Dinámica**: Describe el significado de las expreciones, sentencias y de las unidades del programa en tiempo de ejecución. Para describir este tipo de semantica se pueden utilizar diferentes notaciones, entre ellas: la ***Operacional*** la que resulta útil para los implementadores, ***Axiomatica*** que esta mas orientada a los programadores y ***Denotacional*** es utilizada por el diseñador para descubrir ambiguedades en las sentencias del lenguaje que esta diselando.
+- **Semántica Estática**: Hay características de los lenguajes de programación que no pueden ser descritas mediante notaciones libres de contexto (BNF o EBNF), pero que se pueden resolver en tiempo de compilación. Está mucho más relacionado con las formas y estructuras válidas permitidas, o en el chequeo de tipos. Para describir este tipo de semántica se utiliza una notación de ***Gramática de Atributos***.
+- **Semántica Dinámica**: Describe el significado de las expresiones, sentencias y de las unidades del programa en tiempo de ejecución. Para describir este tipo de semántica se pueden utilizar diferentes notaciones, entre ellas: la ***Operacional,*** la que resulta útil para los implementadores, ***Axiomática*** que está más orientada a los programadores y ***Denotacional*** es utilizada por el diseñador para descubrir ambigüedades en las sentencias del lenguaje que esta diseñando.
 
-## Semántica Estatica
+## Semántica Estática
 
-#### Semántica de Atributos
-Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado los una serie de nuevos elementos que van a aportar mas información al arbol sintactico y nos sera de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
+#### Gramática de Atributos
+Uno de los primeros intentos para desarrollar un modelo semántico de un LP fue en concepto de gramáticas de atributos, desarrollado por Donald Knuth. La idea era asociar una función con cada nodo del árbol de análisis sintáctico de un programa, dando el contenido semántico de ese nodo. Las gramáticas de atributos se crearon agregando funciones (atributos) a cada regla de una gramática.
+Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado una serie de nuevos elementos que van a aportar más información al árbol sintáctico y nos será de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
 
-- Atributos: que son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varian segun los información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrian llegar a almacenar estos atributos seria: El tipo de una variable, el valor de una expreción, una dirección de memoria.
-	- **Sintetizados S(x)**: la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico.
-	- **Heredados I(x)**: la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico.
-	- **Intrínsecos**: son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico
-- **Reglas Semánticas**: son un conjunto de funciones que sirver para definir y calcular los valores de los atributos definidos, y estan asociados a las regrlas de la grmática.
+- **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria, estos atributos pueden ser: sintetizados, heredados o intrínsecos.
+
+- **Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico.
+
+>[!info] Cálculo de los Atributos Sintetizados
+>Estos atributos se calculan en los símbolos no terminal a partir de los atributos de sus símbolos hijos. Estos atributos se utilizan para representar información que se "sintetiza" a medida que se construye la cadena del lenguaje (árbol de análisis sintáctico). Un ejemplo de un atributo sintetizado podría ser el número de elementos en una lista, que se calcula a partir de los elementos individuales de la lista.
+
+- **Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico.
+
+>[!info] Creación de los Atributos Heredados
+>Estos atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
+
+- **Intrínsecos**: Son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico, y guardados en la tabla de símbolos.
+
+>[!info] Atributos Intrínsecos, Uso y Particularidad
+>Son aquellos atributos que están asociados a un símbolo no terminal, estos atributos son calculados por el analizador léxico y guardado en la ***tabla de símbolos*** para su posterior uso.
+>Estos atributos se utilizan para representar información que es inherente a un símbolo no terminal, como el nombre de una variable en un programa o el valor de una constante en una expresión.
+
+>[!info] Uso de esta Gramática
+>Las gramáticas de atributos se pueden usar para transmitir información semántica por todo el árbol sintáctico. Por ejemplo, las producciones de un lenguaje pueden recoger información de declaraciones y esa información de la tabla de símbolos se puede transmitir hacia abajo del árbol para usarse en la generación de código.
+
+- **Reglas Semánticas**: son un conjunto de funciones que sirve para definir y calcular los valores de los atributos definidos, y están asociados a las reglas de la gramática.
 - **Condiciones**: Son un conjunto de predicados que nos permiten verificar si el valor de los atributos van de acuerdo a las reglas de la gramática.
 
 >[!note] Nota
 >- Cada elemento no terminal, puede tener un valor finito de elementos asociados.
->- La aparicion de algunos atributos pueden estar ligadas a expreciones logicas.
->- Los valores de los atributos seran calculadas a traves de las reglas de evaluación asociadas a las reglas de producción.
-
+>- La aparición de algunos atributos pueden estar ligadas a expresiones lógicas.
+>- Los valores de los atributos serán calculadas a través de las reglas de evaluación asociadas a las reglas de producción.
 
 ## Semántica Dinámica
 
 #### Semántica Operacional
 
-Describe el significado de un programa utilizando otro lenuaje de mas bajo nivel y luego ejecutando sus sentencias en una máquina abstracta. Es frecuentemente usada en textos de programación y manuales de referencia del lenguaje dado que esta mas sercana a la implementación y pueden ser útiles a la hora de construir prototipos de procesadores de lenguajes de programación.
+Describe el significado y como se va a ejecutar una sentencia en una máquina determinada, para esto el programa se especifica utilizando otro lenguaje de más bajo nivel y luego ejecutando sus sentencias en una máquina abstracta. Es frecuentemente usada en textos de programación y manuales de referencia del lenguaje, dado que está más cercana a la implementación y pueden ser útiles a la hora de construir prototipos de procesadores de lenguajes de programación.
 
 #### Semántica Axiomática
 
-Describe las acciones de un programa determinando predicados lógicos que especifican restricciones sobre las variables del programa antes y después de su ejecución.
+Este método amplía el cálculo de predicados para incluir programas. Se puede definir la semántica de cada construcción sintáctica en el lenguaje como axiomas o reglas de inferencia (Aserciones) que se pueden usar para deducir el efecto de la ejecución de esa construcción. Para entender el significado del programa completo, se usan los axiomas y reglas de inferencia.
+A partir del supuesto inicial de que los valores de las variables de entrada satisfacen ciertas restricciones, los axiomas y reglas de inferencia se pueden usar para deducir las restricciones que satisfacen los valores de otras variables después de la ejecución de cada enunciado del programa. En último término, se prueba que los resultados del programa satisfacen las restricciones deseadas de sus valores en relación con los valores de entrada. Es decir, se prueba que los valores de salida representan la función correcta computada a partir de los valores.
 
-- **Aserciones**: Si se realiza antes de una sentencia seria una ***Precondición*** y si se realiza despues de una sentecia es una ***Poscondición***, ambos son expresados de la siguiente manera ***{P} S {Q}***.
+- **Aserciones**: Si se realiza antes de una sentencia sería una ***Precondición*** y si se realiza después de una sentencia es una ***Precondición***, ambos son expresados de la siguiente manera ***{P} S {Q}***.
 
 >[!note] Nota
 >Se le asigna una expreción logica o predicado (aserciones) a cada una de las sentencias escritas, de manera que cada sentecnia puede derivar en verdadero o falso o en otra expreción lógica. Cada una de estas expreciones afirman las relaciones entre las variables y las restricciones que se cumplen en ese momento en la ejecución.
 
-- **Precondiciones menos restrictivas**: Nos ayudaran a que se cumplan las poscondiciones y precondiciones mas restrictivas asociadas a estas.
-- **Regla de inferencia:** Es un metodo que nos permite concluir la verasidad de unas afirmaciones en base a anteriores afirmaciones.
+- **Precondiciones menos restrictivas**: Nos ayudarán a que se cumplan las precondiciones más restrictivas asociadas a estas.
+- **Regla de inferencia:** Es un método que nos permite concluir la veracidad de las afirmaciones basándose en anteriores afirmaciones. Son las que van a plantear las post y precondiciones.
 - **Axiomas**: Es una afirmación que es verdadera siempre.
 
 #### Semántica Denotacional
 
-Define el comportamiento de un lenguaje de programación aplicando funciones matemáticas a programas o a construcciones del lenguaje, para representar su significado,  éste es el método más riguroso para describir el significado de los programas o construcciones, ya que incluso se puede predecir el comportamiento de un programa sin necesidad de ejecutarlo en una computadora.
+Brinda una definición del comportamiento de las estructuras o componentes del lenguaje, con esto nos aseguramos que el significado que estas tengan siempre van a ser correctos sin necesidad de ejecutar el código.
+Define el comportamiento de un lenguaje de programación aplicando funciones matemáticas a programas o a construcciones del lenguaje, para representar su significado, este es el método más riguroso para describir el significado de los programas o construcciones, ya que incluso se puede predecir el comportamiento de un programa sin necesidad de ejecutarlo en una computadora.
 
 >[!note] Nota
 >Para lograr describir la semántica con esta notación se le debe asignar a cada construcción del lenguaje un objeto matemático y una funcion que va a mapear instancias de esas construcciones en instancias de ese objeto matemático.
 >Se basa en la recursividad de las funciones, las cuales tienen un dominio y una rango.
 >- **Dominio sintáctico**: estructuras sintácticas que se mapean.
 >- **Dominio semántico**: es la colección de objetos con los que se mapean los parámetros. es decir el rango de la función.
-
