Se creo una nueva seccion de unidad 1 en SO, se corrigio errores de MS 1 y se agrego el .gitignore

--- a/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
+++ b/Metodología de Sistemas I/Unidad 2/1. Modelos de Ciclo de Vida.md
@@ -1,12 +1,12 @@
 >[!important] ¿Que es en si un Modelo de Ciclo de Vida?
 >No es mas que un conjunto de actividades o pasos que hay que seguir con el objetivo de crear un software, con la mejor calidad posible, acorde a las necesidades y requerimientos de los usuarios.
 
-El concepto de Modelo de ciclo de vida en el proceso de desarrollo de software, nace de la mano de la Ingenieria de software, que a su vez aparecio despues de la llamada gran crisis del software de finales de los años 60'. 
+El concepto de Modelo de ciclo de vida en el proceso de desarrollo de software, nace de la mano de la Ingeniería de software, que a su vez apareció después de la llamada gran crisis del software de finales de los años 60'. 
 
->[!note] Objetivo de la Ingenieria de Software
->El objetivo de la ***Ingenieria de Software*** es lograr productos de software de calidad, tanto en su forma final como durante su elaboración, mediante un proceso apoyado por métodos y herramientas. A su vez éste concepto cuenta con varias definiciones que varian segun los autores y el año en el que se elaboraron, alguna de ellas son:
->- La ingeniería de software es el establecimiento y uso de principios fundamentales de la ingeniería con objeto de desarrollar software en forma económica que sea confiable y que trabaje con eficiencia en máquinas reales. Definición creada por ***Fritz Bauer*** en 1968.
->- La ingeniería de software es la aplicación de un enfoque sistemático, disciplinado y cuantificable al desarrollo, operación y mantenimiento de software; es decir, la aplicación de la Ingeniería al Software. Definición elavorada por el ***IEEE*** en 1998.
+>[!note] Objetivo de la Ingeniería de Software
+>El objetivo de la ***Ingeniería de Software*** es lograr productos de software de calidad, tanto en su forma final como durante su elaboración, mediante un proceso apoyado por métodos y herramientas. A su vez, este concepto cuenta con varias definiciones que varían según los autores y el año en el que se elaboraron, alguna de ellas son:
+>- La ingeniería de software es el establecimiento y uso de principios fundamentales de la ingeniería con objeto de desarrollar software en forma económica, que sea confiable y que trabaje con eficiencia en máquinas reales. Definición creada por ***Fritz Bauer*** en 1968.
+>- La ingeniería de software es la aplicación de un enfoque sistemático, disciplinado y cuantificable al desarrollo, operación y mantenimiento de software; es decir, la aplicación de la Ingeniería al Software. Definición elaborada por el ***IEEE*** en 1998.
 >- La ingeniería de software incluye procesos, métodos y herramientas que permiten elaborar sistemas complejos a tiempo y con calidad. Se requiere un esfuerzo conjunto para entender el problema antes de desarrollar una aplicación de software, donde debe existir un compromiso por ambas partes implicadas.
 
 #### Procesos
@@ -21,13 +21,13 @@ Todos los procesos de software incluyen cuatro actividades fundamentales:
 >[!note] Variaciones
 >Si bien estos prasos van a estar presentes en todos los procesos, el nombre de estos puede variar según los autores o incluso ser divididos en dos etapas mas especificas.
 
-Cabe resaltar que no existe un proceso ideal, ya que esto va a variar dependiendo el tipo de proyecto que se vaya a realizar o de otros factores adyasentes como costos o fecha de entrega. Además muchas organizaciones diseñan sus propios procesos de desarrollo de software, basandose en modelos ya existentes o tomando algunas caracteristicas de estos mismo, de forma que se adapten de manera correcta a su forma de desarrollo y a las necesidades del mismo.
-Los procesos tienen en cuenta las características específicas de los sistemas (sistemas críticos, empresariales, etc); cuyo principal proposito siempre es entregar a tiempo el software y con calidad para satisfacer a quienes patrocinaron su creación y a aquellos que lo usarán.
+Cabe resaltar que no existe un proceso ideal, ya que esto va a variar dependiendo el tipo de proyecto que se vaya a realizar o de otros factores adyacentes como costos o fecha de entrega. Además, muchas organizaciones diseñan sus propios procesos de desarrollo de software, basándose en modelos ya existentes o tomando algunas características de estos mismos, de forma que se adapten de manera correcta a su forma de desarrollo y a las necesidades del mismo.
+Los procesos tienen en cuenta las características específicas de los sistemas (sistemas críticos, empresariales, etc.); cuyo principal propósito siempre es entregar a tiempo el software y con calidad para satisfacer a quienes patrocinaron su creación y a aquellos que lo usarán.
 
 ##### Modelos de Procesos de Desarrollo de Software
 
-Un modelo de proceso de software es una ***representación simplificada de un proceso***, estos tambien son denominados comunmente como *paradigmas de procesos*. Representan el marco (framework) del proceso, pero no los detalles de las actividades específicas.
-Éstos modelos son genéricos y no son descripciones definitivas de los procesos de software, ya que estos al ser considerados más como un marcos del proceso (framework), que pueden extenderse y adaptarse para crear procesos más específicos de ingeniería de software.
+Un modelo de proceso de software es una ***representación simplificada de un proceso***, estos también son denominados comúnmente como *paradigmas de procesos*. Representan el marco del proceso, pero no los detalles de las actividades específicas.
+Estos modelos son genéricos y no son descripciones definitivas de los procesos de software, ya que estos son considerados un marco del proceso (framework), que pueden extenderse y adaptarse para crear procesos más específicos de ingeniería de software.
 
 >[!info] Importante Tener en Cuenta
 >La existencia de un proceso de software no es garantía de que el software se entregue a tiempo o que satisfaga las necesidades de los clientes.
