Llamadas al sistema

--- a/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
+++ b/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
@@ -88,3 +88,39 @@ La idea fundamental que subyace a una máquina virtual es la de abstraer el HW d
 El SW de la máquina virtual puede ejecutarse en modo kernel, dado que es el SO; la máquina  virtual en sí puede ejecutarse solo en modo usuario. Sin embargo, al igual que la máquina física tiene dos modos, también tiene que tenerlos la máquina virtual. Es decir, hay que tener un modo usuario virtual y un modo kernel virtual, ejecutándose ambos en modo usuario físico.
 
 #### Llamadas al sistema
+Las **llamadas al sistema** proporcionan una interfaz con la que poder invocar los servicios que el SO ofrece. Estas llamadas, generalmente, están disponibles como rutinas escritas en C y C++, aunque determinadas tareas de bajo nivel, como por ejemplo aquellas en las que se tiene que acceder directamente al hardware, pueden escribirse con instrucciones de lenguaje ensamblador.
+
+##### Tipos de llamadas al sistema
+Las llamadas al sistema pueden agruparse de forma muy general en cinco categorías principales, **controles de procesos**, **manipulación de archivos**, **manipulación de dispositivos**, **mantenimiento de información** y **comunicaciones**.
+
+- Control de procesos:
+	- terminar, abortar
+	- cargar, ejecutar
+	- crear procesos, terminar procesos
+	- obtener atributos del proceso, definir atributos del proceso
+	- esperar para obtener tiempo
+	- esperar suceso, señalizar suceso
+	- asignar y liberar memoria
+
+- Administración de archivos:
+	- crear archivos, borrar archivos
+	- abrir, cerrar
+	- leer, escribir, reposicionar
+	- obtener atributos de archivo, definir atributos de archivo
+
+- Administración de dispositivos:
+	- solicitar dispositivo, liberar dispositivo
+	- leer, escribir, reposicionar
+	- obtener atributos de dispositivo, definir atributos de dispositivo
+	- conectar y desconectar dispositivo lógicamente
+
+- Mantenimiento de información:
+	- obtener la hora o la fecha, definir la hora o fecha
+	- obtener datos del sistema, establecer datos del sistema
+	- obtener los atributos de procesos, archivos o dispositivos
+
+- Comunicaciones:
+	- crear, eliminar conexiones de comunicación
+	- enviar recibir mensajes
+	- transferir información de estado
+	- conectar y desconectar dispositivos remotos 
