Se agrego notas a los curosos de créditos y se unio el contenido de LP a las notas principales

--- a/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -33,17 +33,17 @@ Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregad
 
 - **Atributos**: Son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varían según la información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrían llegar a almacenar estos atributos sería: El tipo de una variable, el valor de una expresión, una dirección de memoria, estos atributos pueden ser: sintetizados, heredados o intrínsecos.
 
-- **Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico.
+- **Atributos Sintetizados S(x)**: Cuando la información es pasada de abajo hacia arriba entre los distintos nodos del árbol sintáctico.
 
 >[!info] Cálculo de los Atributos Sintetizados
 >Estos atributos se calculan en los símbolos no terminal a partir de los atributos de sus símbolos hijos. Estos atributos se utilizan para representar información que se "sintetiza" a medida que se construye la cadena del lenguaje (árbol de análisis sintáctico). Un ejemplo de un atributo sintetizado podría ser el número de elementos en una lista, que se calcula a partir de los elementos individuales de la lista.
 
-- **Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico.
+- **Atributos Heredados I(x)**: Cuando la información fluye de arriba hacia abajo entre los distintos nodos del árbol sintáctico.
 
 >[!info] Creación de los Atributos Heredados
 >Estos atributos que se transfieren desde un símbolo no terminal a uno o más de sus símbolos hijos. Estos atributos se utilizan para representar información que se "hereda" de un nivel de la gramática a otro. Un ejemplo de un atributo heredado podría ser el tipo de dato de una variable en un programa, que se hereda desde la declaración de la variable a su uso posterior en el código.
 
-- **Intrínsecos**: Son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico, y guardados en la tabla de símbolos.
+- **Atributos Intrínsecos**: Son un caso particular de valor sintetizado, el cual solo es asignado a las hojas del árbol y que son calculados por fuera del árbol sintáctico, y guardados en la tabla de símbolos.
 
 >[!info] Atributos Intrínsecos, Uso y Particularidad
 >Son aquellos atributos que están asociados a un símbolo no terminal, estos atributos son calculados por el analizador léxico y guardado en la ***tabla de símbolos*** para su posterior uso.
@@ -64,7 +64,11 @@ Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregad
 
 #### Semántica Operacional
 
-Describe el significado y como se va a ejecutar una sentencia en una máquina determinada, para esto el programa se especifica utilizando otro lenguaje de más bajo nivel y luego ejecutando sus sentencias en una máquina abstracta. Es frecuentemente usada en textos de programación y manuales de referencia del lenguaje, dado que está más cercana a la implementación y pueden ser útiles a la hora de construir prototipos de procesadores de lenguajes de programación.
+Describe el **significado** del lenguaje **especificando como se ejecuta un programa en una máquina abstracta**, básicamente esta semántica se centra en **conocer el resultado** que genera el programa y **el modo en que este resultado es obtenido**. Puede estar basado en una máquina abstracta concreta (que existe) o en una genérica (que no existe físicamente, pero se especifica). Son **útiles, sobre todo, en la implementación de los lenguajes.** Porque dice como debe ejecutarse el programa en tiempo de ejecución.
+
+>[!info] Información Extra
+>Por lo general en este tipo de semántica el programa se especifica utilizando otro lenguaje de más bajo nivel y luego ejecutando sus sentencias en una máquina abstracta o también puede ser expresado mediante una notación formal.
+>Es frecuentemente usada en textos de programación y manuales de referencia del lenguaje, dado que está más cercana a la implementación y pueden ser útiles a la hora de construir prototipos de procesadores de lenguajes de programación.
 
 #### Semántica Axiomática
 
@@ -84,6 +88,9 @@ A partir del supuesto inicial de que los valores de las variables de entrada sat
 
 Brinda una definición del comportamiento de las estructuras o componentes del lenguaje, con esto nos aseguramos que el significado que estas tengan siempre van a ser correctos sin necesidad de ejecutar el código.
 Define el comportamiento de un lenguaje de programación aplicando funciones matemáticas a programas o a construcciones del lenguaje, para representar su significado, este es el método más riguroso para describir el significado de los programas o construcciones, ya que incluso se puede predecir el comportamiento de un programa sin necesidad de ejecutarlo en una computadora.
+
+>[!important] Funcionalidad y Ventajas
+>Define una función que computa el programa (al programa se lo ve como una función, entrada, proceso, salida), pero sin ocuparse de la forma en que lo hace, brindando un nivel de abstracción mayor que el de la semántica operacional y esto permite estudiar propiedades formales de los programas, como, por ejemplo, las equivalencias que pueda haber entre dos programas, desde el punto de vista del resultado que dan (sin importar la entrada, proceso). 
 
 >[!note] Nota
 >Para lograr describir la semántica con esta notación se le debe asignar a cada construcción del lenguaje un objeto matemático y una funcion que va a mapear instancias de esas construcciones en instancias de ese objeto matemático.
