--- a/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
+++ b/Sistemas Operativos/Unidad 1/2. Información mas Amplia.md
@@ -55,72 +55,68 @@ Para que el sistema informático sea cómodo para los usuarios, el SO proporcion
 >- Asignación de archivos a los dispositivos de almacenamiento secundario.
 >- Copia de seguridad de los archivos en medios de almacenamiento estables (no volátiles).
 
-##### Protección y seguridad
+### Protección y seguridad
+
 Si un sistema informático tiene múltiples usuarios y permite la ejecución concurrente de múltiples procesos, entonces el acceso a los datos debe regularse. Se emplean mecanismos que aseguren que solo puedan utilizar los recursos aquellos procesos que hayan obtenido la apropiada autorización del SO.
 La **protección** es cualquier mecanismo que controle el acceso de procesos y usuarios a los recursos definidos por un sistema informático. Este mecanismo debe proporcionar los medios para la especificación de los controles que hay que imponer y para la aplicación de dichos controles. La protección puede mejorar la fiabilidad, permitiendo detectar errores latentes en las interfaces entre los subsistemas componentes. La detección temprana de errores de interfaz a menudo puede evitar la contaminación de un subsistema que funciona perfectamente por parte de otro subsistema que funcione mal.
+Un sistema puede tener la protección adecuada pero estar expuesto a fallos y permitir accesos inapropiados. Considere un usuario al que le han robado su información de autenticación (con los que ingresa al sistema); sus datos podrían ser copiados o borrados, incluso aunque este funcionando la protección de archivos y memoria. Es responsabilidad de los mecanismos de **seguridad** defender al sistema frente a ataques internos y externos. Tales ataques abarcan un enorme rango, desde virus y gusanos, los ataques de denegación de servicio, robo de identidad y robo de servicio. La prevención de algunos de estos ataques se considera una función del SO en algunos sistemas, mientras que otros se encarga un software adicional.
 
-Un sistema puede tener la protección adecuada pero estar expuesto a fallos y permitir accesos inapropiados. Considere un usuario al que le han robado su información de autenticación (con los que ingresa al sistema); sus datos podrían ser copiados o borrados, incluso aunque este funcionando la protección de archivos y memoria. Es responsabilidad de los mecanismos de **seguridad** defender al sistema frente a ataques internos y externos. Tales ataques abarcan un enorme rango, desde virus y gusanos, los ataques de denegación de servicio, robo de identidad y robo de servicio. La prevención de algunos de estos ataques se considera una función del SO en algunos sistemas, mientras que otros se encarga un SW adicional.
+>[!note] Como se Proteje el Sistema Operativo
+>La protección y la seguridad requieren que el sistema pueda distinguir a todos sus usuarios. Los SO (en su mayoría) mantienen una lista de los nombres de usuario y sus **identificadores de usuario** (ID) asociados.
 
-La protección y la seguridad requieren que el sistema pueda distinguir a todos sus usuarios. Los SO (en su mayoría) mantienen una lista de los nombres de usuario y sus **identificadores de usuario** (ID) asociados.
+### Estructuras de sistemas operativos.
 
-#### Estructuras de sistemas operativos.
 Un SO proporciona el entorno en el que se ejecutan los programas. Internamente, los SO varían mucho en su composición, dado que su organización puede analizarse aplicando múltiples criterios diferentes.
 
-##### Servicios del SO
+### Servicios del SO
+
 El sistema presta ciertos servicios a los programas y a los usuarios de dichos programas. Los servicios específicos que se suministran difieren de un SO a otro, pero podemos identificar perfectamente una serie de clases comunes. Estos servicios del sistema operativo se proporcionan para comodidad del programador, con el fin de facilitar la tarea de desarrollo. Un cierto conjunto de servicios del SO proporciona funciones que resultan útiles al usuario:
 
--**Interfaz de usuario:** Casi todos los SO disponen de una interfaz de usuario que puede tomar diferentes formas. Uno de los  tipos existentes es la interfaz de línea de comandos (CLI). Habitualmente, se utiliza una interfaz gráfica de usuario (GUI), en este caso, la interfaz es un sistema de ventanas. 
+- **Interfaz de usuario:** Casi todos los SO disponen de una interfaz de usuario que puede tomar diferentes formas. Uno de los tipos existentes es la interfaz de línea de comandos (CLI). Habitualmente, se utiliza una interfaz gráfica de usuario (GUI), en este caso, la interfaz es un sistema de ventanas. 
+- **Ejecución de programas:** El sistema tiene que poder cargar un programa en memoria y ejecutar dicho programa. Todo programa debe poder terminar su ejecución, de forma normal o anormal (indicando un error).
+- **Operaciones de E/S**: Un programa en ejecución puede necesitar llevar a cabo operaciones de E/S, dirigidas a un archivo o a un dispositivo de E/S. Por cuestiones de eficiencia y protección, los usuarios no pueden, normalmente, controlar de modo directo los dispositivos de E/S; por tanto, el SO debe proporcionar medios para realizar la E/S.
+- **Manipulación del sistema de archivos**: El sistema de archivos tiene una importancia especial. Obviamente, los programas necesitan leer y escribir en archivos y directorios. También necesitan crearlos y borrarlos usando su nombre, realizar búsquedas en un determinado archivo o presentar la información contenida en un archivo. Algunos programas incluyen mecanismos de gestión de permisos para conceder o denegar el acceso a los archivos o directorios, basándose en quien sea el propietario del archivo.
+- **Comunicaciones**: Hay muchas circunstancias en las que un proceso necesita intercambiar información con otro. Dicha comunicación puede tener lugar entre procesos que estén ejecutándose en la misma computadora o entre procesos que se ejecuten en computadores diferentes conectadas a través de una red. Las comunicaciones se pueden implementar utilizando memoria compartida o mediante paso de mensajes, procedimiento en el cual el SO transfiere paquetes de información entre procesos y otros.
+- **Detección de errores**: El SO necesita detectar constantemente los posibles errores. Estos errores pueden producirse en el hardware o en programas de usuario. Para cada tipo de error, el sistema operativo debe llevar a cabo la acción apropiada para asegurar un funcionamiento correcto y coherente. Las facilidades de depuración pueden mejorar en gran medida la capacidad de los usuarios y programadores para utilizar el sistema de manera eficiente.
+- **Asignación de recursos**: Cuando hay varios usuarios o varios trabajos ejecutándose al mismo tiempo, deben asignarse a cada uno de ellos los recursos necesarios. El SO gestiona muchos tipos diferentes de recursos; (Como los ciclos del CPU, la memoria principal, espacio de almacenamiento de archivos) algunos pueden disponer de código SW especial que gestione su asignación, mientras que otros (como los dispositivos de E/S) pueden tener código que gestione de forma mucho más general su solicitud y liberación.
 
--**Ejecución de programas:** El sistema tiene que poder cargar un programa en memoria y ejecutar dicho programa. Todo programa debe poder terminar su ejecución, de forma normal o anormal (indicando un error).
+### Máquinas virtuales
 
--**Operaciones de E/S**: Un programa en ejecución puede necesitar llevar a cabo operaciones de E/S, dirigidas a un archivo o a un dispositivo de E/S. Por cuestiones de eficiencia y protección, los usuarios no pueden, normalmente, controlar de modo directo los dispositivos de E/S; por tanto, el SO debe proporcionar medios para realizar la E/S.
+La idea fundamental que subyace a una máquina virtual es la de abstraer el hardware de la computadora, formando varios entornos de ejecución diferentes, creando así la ilusión de que cada entorno de ejecución está operando en su propia computadora privada. Un SO puede crear la ilusión de que un proceso tiene su propio procesador con su propia memoria (virtual). La máquina virtual proporciona una interfaz que se identifica al hardware básico subyacente. Su uso es fundamentalmente poder compartir el mismo hardware y, a pesar de ello, operar con entornos de ejecución diferentes (es decir, diferentes SO's) de forma concurrente.
+El software de la máquina virtual puede ejecutarse en modo kernel, dado que es el SO; la máquina virtual en sí puede ejecutarse solo en modo usuario. Sin embargo, al igual que la máquina física tiene dos modos, también tiene que tenerlos la máquina virtual. Es decir, hay que tener un modo usuario virtual y un modo kernel virtual, ejecutándose ambos en modo usuario físico.
 
--**Manipulación del sistema de archivos**: El sistema de archivos tiene una importancia especial. Obviamente, los programas necesitan leer y escribir en archivos y directorios. También necesitan crearlos y borrarlos usando su nombre, realizar búsquedas en un determinado archivo o presentar la información contenida en un archivo. Algunos programas incluyen mecanismos de gestión de permisos para conceder o denegar el acceso a los archivos o directorios, basándose en quien sea el propietario del archivo.
+### Llamadas al sistema
 
--**Comunicaciones**: Hay muchas circunstancias en las que un proceso necesita intercambiar información con otro. Dicha comunicación puede tener lugar entre procesos que estén ejecutándose en la misma computadora o entre procesos que se ejecuten en computadores diferentes conectadas a través de una red. Las comunicaciones se pueden implementar utilizando memoria compartida o mediante paso de mensajes, procedimiento este en el que el SO transfiere paquetes de información entre procesos y otros.
-
--**Detección de errores**: El SO necesita detectar constantemente los posibles errores. Estos errores pueden producirse en el HW o en programas de usuario. Para cada tipo de error, el sistema operativo debe llevar a cabo la acción apropiada para asegurar un funcionamiento correcto y coherente. Las facilidades de depuración pueden mejorar en gran medida la capacidad de los usuarios y programadores para utilizar el sistema de manera eficiente.
-
--**Asignación de recursos**: Cuando hay varios usuarios o varios trabajos ejecutándose al mismo tiempo, deben asignarse a cada uno de ellos los recursos necesarios. El SO gestiona muchos tipos diferentes de recursos; (Como los ciclos del CPU, la memoria principal, espacio de almacenamiento de archivos) algunos pueden disponer de código SW especial que gestione su asignación, mientras que otros (como los dispositivos de E/S) pueden tener código que gestione de forma mucho más general su solicitud y liberación.
-
-##### Máquinas virtuales:
-La idea fundamental que subyace a una máquina virtual es la de abstraer el HW de la computadora, formando varios entornos de ejecución diferentes, creando así la ilusión de que cada entorno de ejecución está operando en su propia computadora privada. Un SO puede crear la ilusión de que un proceso tiene su propio procesador con su propia memoria (virtual). La máquina virtual proporciona una interfaz que se identifica al HW básico subyacente. Su uso es fundamentalmente poder compartir el mismo hardware y, a pesar de ello, operar con entornos de ejecución diferentes (es decir, diferentes SO's) de forma concurrente.
-El SW de la máquina virtual puede ejecutarse en modo kernel, dado que es el SO; la máquina  virtual en sí puede ejecutarse solo en modo usuario. Sin embargo, al igual que la máquina física tiene dos modos, también tiene que tenerlos la máquina virtual. Es decir, hay que tener un modo usuario virtual y un modo kernel virtual, ejecutándose ambos en modo usuario físico.
-
-#### Llamadas al sistema
 Las **llamadas al sistema** proporcionan una interfaz con la que poder invocar los servicios que el SO ofrece. Estas llamadas, generalmente, están disponibles como rutinas escritas en C y C++, aunque determinadas tareas de bajo nivel, como por ejemplo aquellas en las que se tiene que acceder directamente al hardware, pueden escribirse con instrucciones de lenguaje ensamblador.
 
-##### Tipos de llamadas al sistema
-Las llamadas al sistema pueden agruparse de forma muy general en cinco categorías principales, **controles de procesos**, **manipulación de archivos**, **manipulación de dispositivos**, **mantenimiento de información** y **comunicaciones**.
+>[!important] Tipos de Llamadas al Sistema
+>Las llamadas al sistema pueden agruparse de forma muy general en cinco categorías principales, ***controles de procesos***, ***manipulación de archivos***, ***manipulación de dispositivos***, ***mantenimiento de información*** y ***comunicaciones***.
+>
+>- **Control de procesos**:
+>	- Terminar, abortar.
+>	- Cargar, ejecutar.
+>	- Crear procesos, terminar procesos.
+>	- Obtener atributos del proceso, definir atributos del proceso.
+>	- Esperar para obtener tiempo.
+>	- Esperar suceso, señalizar suceso.
+>	- Asignar y liberar memoria.
+>- **Administración de archivos**:
+>	- Crear archivos, borrar archivos.
+>	- Abrir, cerrar.
+>	- Leer, escribir, reposicionar.
+>	- Obtener atributos de archivo, definir atributos de archivo.
+>- **Administración de dispositivos**:
+>	- Solicitar dispositivo, liberar dispositivo.
+>	- Leer, escribir, reposicionar.
+>	- Obtener atributos de dispositivo, definir atributos de dispositivo.
+>	- Conectar y desconectar dispositivo lógicamente.
+>- **Mantenimiento de información**:
+>	- Obtener la hora o la fecha, definir la hora o fecha.
+>	- Obtener datos del sistema, establecer datos del sistema.
+>	- Obtener los atributos de procesos, archivos o dispositivos.
+>- **Comunicaciones**:
+>	- Crear, eliminar conexiones de comunicación.
+>	- Enviar y recibir mensajes.
+>	- Transferir información de estado.
+>	- Conectar y desconectar dispositivos remotos.
 
-- Control de procesos:
-	- terminar, abortar
-	- cargar, ejecutar
-	- crear procesos, terminar procesos
-	- obtener atributos del proceso, definir atributos del proceso
-	- esperar para obtener tiempo
-	- esperar suceso, señalizar suceso
-	- asignar y liberar memoria
-
-- Administración de archivos:
-	- crear archivos, borrar archivos
-	- abrir, cerrar
-	- leer, escribir, reposicionar
-	- obtener atributos de archivo, definir atributos de archivo
-
-- Administración de dispositivos:
-	- solicitar dispositivo, liberar dispositivo
-	- leer, escribir, reposicionar
-	- obtener atributos de dispositivo, definir atributos de dispositivo
-	- conectar y desconectar dispositivo lógicamente
-
-- Mantenimiento de información:
-	- obtener la hora o la fecha, definir la hora o fecha
-	- obtener datos del sistema, establecer datos del sistema
-	- obtener los atributos de procesos, archivos o dispositivos
-
-- Comunicaciones:
-	- crear, eliminar conexiones de comunicación
-	- enviar recibir mensajes
-	- transferir información de estado
-	- conectar y desconectar dispositivos remotos 
