--- a/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
+++ b/Autómatas y Lenguajes Formales/Unidad 2/1. Máquinas.md
@@ -1,7 +1,7 @@
 
 ## Máquina Abstracta Concepto
 
-Es un dispositivo teorico capas de recibir y transformar información. Cuentan una serie de propiedades que los caracterizan:
+Es un dispositivo teórico capas de recibir y transformar información. Cuentan una serie de propiedades que los caracterizan:
 
 - **Evento**: cambio de valor de una señal en un instante de tiempo.
 - **Estado**: conjunto de atributos que representan las propiedades de un sistema u objeto en un determinado instante de tiempo.
@@ -9,19 +9,19 @@ Es un dispositivo teorico capas de recibir y transformar información. Cuentan u
 
 ## Máquinas de Estado
 
-Son aquellas cuyas salidas, en un instante de tiempo, dependende de los valores que toman las entradas y el estado en ese instantede tiempo. Esto cambio se refleja a través de la ***función de transición***. Cada máquina comienza en un estado inicial con una secuencia de valores de entrada.
+Son aquellas cuyas salidas, en un instante de tiempo, dependen de los valores que toman las entradas y el estado en ese instante de tiempo. Este cambio se refleja a través de la ***función de transición***. Cada máquina comienza en un estado inicial con una secuencia de valores de entrada.
 Un modelo matemático adecuado para representar la función de transición de una máquina de estado es una ***matriz***, donde las filas representan los diferentes estados, las columnas representan los diferentes eventos de entrada y el contenido de la matriz especifica el próximo estado.
 Estas máquinas se pueden representar mediante diagramas de estados. Los cuales Son una representación gráfica de la matriz de transiciones donde:
 
 - **Los estados se representan como círculos**.
 - **Las transiciones como líneas orientadas**: Conectan estados y representan los eventos de entrada.
 
-Si un sistema puede describirse mediante un diagrama deestados o a través de las ***matrices de transiciones*** se dice que el ***sistema es secuencial***. En un sistema secuencial las salidas dependen de las entradas presentes y de los valores de las entradas anteriores. Existen dos tipos de máquinas secuenciales:
+Si un sistema puede describirse mediante un diagrama de estados o a través de las ***matrices de transiciones,*** se dice que el ***sistema es secuencial***. En un sistema secuencial las salidas dependen de las entradas presentes y de los valores de las entradas anteriores. Existen dos tipos de máquinas secuenciales:
 
 - **Máquina de Mealy**: Los valores de salida van a depender de los valores de entrada y del estado en el que se encuentre en ese momento.
-- **Máquina de Moore**: Los valores de salida van a depender unicamente del estado en la que se encuentra la máquina.
+- **Máquina de Moore**: Los valores de salida van a depender únicamente del estado en la que se encuentra la máquina.
 
-Ambas máquinas se definen como una quintupla: ***ME/MO = (ΣE , ΣS , Q, f, g)***. Donde:
+Ambas máquinas se definen como una quíntupla: ***ME/MO = (ΣE , ΣS , Q, f, g)***. Donde:
 
 - ΣE es el alfabeto de símbolos de entrada.
 - ΣS es el alfabeto de símbolos de salida.
