--- a/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -85,9 +85,9 @@ Mediante esta dado un determinado automata podemos demostrar que una palabra es 
 Dado dos autómatas A1 y A2, para comprobar si estos autómatas son equivalentes se utiliza el ***teorema de Moore***.
 
 >[!important] Teorema de Moore
-> Dos estados q y q´ son ***compatibles*** si ambos son finales o ninguno delos dos lo es. Si uno es final y el otro no, entonces se dice que son ***incompatibles***.
+> Dos estados q y q´ son ***compatibles*** si ambos son finales o ninguno de los dos lo es. Si uno es final y el otro no, entonces se dice que son ***incompatibles***.
 
-Entonces dados dos autómatas ***A(Q, Σ, δ, q0 , F) y A´(Q´, Σ´, δ´, q0´, F´)***
+Entonces, dados dos autómatas ***A(Q, Σ, δ, q0 , F) y A´(Q´, Σ´, δ´, q0´, F´)***
 1. Inicialmente la raíz del árbol es (q0 , q0´).
 2. Si en el árbol hay un par (r, r´), para cada carácter en Σ se añaden como hijos suyos los pares ***(rσ ,rσ´)*** donde ***rσ = δ(r, σ), rσ´= δ(r´, σ)***, si no existen.
 3. Si aparece en el árbol un par (r, r´) de estados incompatibles, se interrumpe la construcción del mismo, concluyendo que los autómatas no son equivalentes. En caso contrario se continúan a partir del paso 2.
